# margin

./: .env.example  .gitignore  README.md  SPEC.md  config.txt  docker-compose.yml  nim-api.txt  render.yaml
.github/workflows/: ci.yml  keepalive.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/margin_api/: __init__.py  auth.py  config.py  db.py  email_templates.py  embeddings.py  firebase_auth.py  llm.py  mailer.py  main.py  mcp_server.py  models.py  rate_limit.py  routes_rest.py  storage.py
apps/api/src/margin_api/oauth/: __init__.py  routes.py  services.py  services_helpers.py  state.py  tokens.py
apps/api/src/margin_api/services/: __init__.py  agents.py  auth_codes.py  citations.py  events.py  findings.py  owners.py  projects.py  reports.py  reviews.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_full_flow.py
apps/api/tests/integration/: test_auth.py  test_citations.py  test_events.py  test_findings_dedup.py  test_oauth.py  test_projects.py  test_query_findings.py  test_reports.py  test_reviews.py
apps/api/tests/unit/: test_embeddings.py  test_normalize.py  test_rate_limit.py  test_url_normalize.py
apps/web/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  wrangler.toml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: page.tsx
apps/web/src/components/: ActivityTimeline.tsx  CodeBlock.tsx  Hero.tsx  PrimitivesTable.tsx
apps/web/src/lib/: api.ts  firebase.ts
apps/web/tests/: auth.spec.ts  dashboard.spec.ts  landing.spec.ts
docs/: demo-script.md  landing-copy.md  yc-application.md
infra/: koyeb.yaml  seed.py
infra/migrations/: 001_init.sql  003_agents_soft_delete.sql  004_owners_welcomed_at.sql  005_oauth.sql  run.py
(+6 files in other folders)
