[project]
name = "margin-api"
version = "0.1.0"
description = "Margin: agent-native research workspace API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=2.0,<3.0",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "httpx>=0.28",
    "trafilatura>=2.0",
    "boto3>=1.35",
    "groq>=0.18",
    "voyageai>=0.3",
    "resend>=2.5",
    "python-dotenv>=1.0",
    "sse-starlette>=2.2",
    "pyjwt>=2.10",
    "structlog>=24.4",
]

[project.optional-dependencies]
# `sentence-transformers` (and its torch dependency) is only needed for the
# offline-fallback embedding path. It pulls ~2GB of wheels, so we keep it as
# an opt-in extra. Install with `uv sync --extra fallback` if you want the
# local model available.
fallback = [
    "sentence-transformers>=3.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-boto3>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real external services (Voyage, Groq, R2). Skipped by default.",
    "slow: loads the local sentence-transformers fallback model on CPU.",
]
addopts = "-q -m 'not live and not slow'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
